# flatbot

./: .env.example  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml  scraper.py
alembic/: env.py
alembic/versions/: a2f3e1c8b4d7_drop_temporal_alquiler_regulado.py  c7a4e92f1d8b_add_alert_carousels.py  ed5916ce4755_initial_schema.py
deploy/: install.sh  update.sh
flatbot/: alerts.py  config.py  db.py  logging_conf.py  matching.py  models.py  repos.py  scanner.py  scheduler.py  schemas.py
flatbot/bot/: api_client.py  handlers.py  main.py
flatbot/integrations/openproperties/: __init__.py  client.py  dto.py  mapper.py  query_builder.py
flatbot/services/: backup.py  settings.py
flatbot/web/: app.py  auth.py  deps.py
flatbot/web/routes/: api.py  config.py  dashboard.py  filters.py  login.py
flatbot/web/templates/: base.html  config.html  dashboard.html  login.html
flatbot/web/templates/filters/: form.html  list.html  row.html  test_result.html
tests/: conftest.py  test_alerts.py  test_api.py  test_auth.py  test_backup.py  test_bot_handlers.py  test_health.py  test_matching.py  test_openproperties_contract.py  test_repos.py  test_scanner.py  test_web.py
tests/fixtures/: openproperties_listings.json
